--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: CI Pipeline
 
 on:
   push:
@@ -7,23 +7,69 @@ on:
     branches: [ main ]
 
 jobs:
-  terraform-validate:
+  terraform:
+    name: Terraform Validate
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.5.0
-      - run: cd terraform && terraform init -backend=false
-      - run: cd terraform && terraform validate
 
-  lint-and-test:
+      - name: Init Terraform
+        run: cd terraform && terraform init -backend=false
+
+      - name: Validate Terraform
+        run: cd terraform && terraform validate
+
+  lint:
+    name: Lint Python Scripts
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: pip install -r requirements.txt flake8 pytest
-      - run: flake8 scripts
-      - run: pytest -q
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt flake8
+
+      - name: Run flake8
+        run: flake8 scripts
+
+  tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: lint   # ensures lint runs before tests
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt pytest
+
+      - name: Run pytest
+        run: pytest -q
+
+  # Optional stage for future improvements
+  security:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'   # only run on push, not PRs
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run Bandit (Python security linter)
+        run: pip install bandit && bandit -r scripts || true
